Nested-stacks/security-group-configuration.yaml
Description: |
  Cloudformation template that creates two security groups for allowing SSH and HTTP inbound traffic which will be used as a nested/child stack inside other stacks.

Parameters:
  ApplicationName:
    Type: String

Resources:
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow SSH into EC2 instances
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ["-", [SSHSecurityGroup, !Ref ApplicationName]]
        - Key: Description
          Value: Security group to allow SSH into EC2 instances using port 22

  PublicHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow public access on port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ["-", [PublicHTTPSecurityGroup, !Ref ApplicationName]]
        - Key: Description
          Value: Security group to allow public access on HTTP port 80

Outputs:
  PublicHTTPSecurityGroup:
    Value: !Ref PublicHTTPSecurityGroup
    Description: Security group that allows public access to default HTTP port 80
  SSHSecurityGroup:
    Value: !Ref SSHSecurityGroup
    Description: Security group allows SSH access into linux based EC2 instances using the private key
